# quran-cli

./: Cargo.toml  README.md  TODO.md
src/: main.rs  recitations.rs  surah.rs  surahs.rs
